kubernetes/storage-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: storage-test
  namespace: default
spec:
  containers:
    - name: writer
      image: busybox:latest
      command: ["sh", "-c", "echo 'Dit bestand overleeft een pod-herstart' > /data/bewijs.txt && sleep 3600"]
      volumeMounts:
        - name: data
          mountPath: /data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: storage-test-data
